--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d out",
 
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
